公開データ

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, maximum-scale=2, user-scalable=1">
-	<title>KAKEDASHI &#8211; かけだし サンセリテ札幌公式オンラインショップ</title>
-	<meta property="og:description" content="毎日必要なミネラルを、手軽においしく補給。自然素材そのまま。保存料、着色料、酵母エキス、食塩不使用。どんな料理も、うまみが深まる万能の出汁。それが『ＫＡＫＥＤＡＳＨＩ』です。">
-	<meta name="description" content="高品質なレザーを使用したシンプルなデザインの財布。コンパクトながら収納力抜群で、日常使いに最適です。">
+	<title>５日間限定 秋祭り サンセリテ札幌公式オンラインショップ</title>
+	<meta property="og:description" content="今だけの特別大特価なんでもかんでも値上がりの今だから。サンセリテ秋祭り">
+	<meta name="description" content="今だけの特別大特価なんでもかんでも値上がりの今だから。サンセリテ秋祭り">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="KAKEDASHI &#8211; サンセリテ札幌公式オンラインショップ">
-	<meta property="og:description" content="毎日必要なミネラルを、手軽においしく補給。自然素材そのまま。保存料、着色料、酵母エキス、食塩不使用。どんな料理も、うまみが深まる万能の出汁。それが『ＫＡＫＥＤＡＳＨＩ』です。">
-	<meta property="og:url" content="https://www.sincerite.jp/kakedashi/">
+	<meta property="og:title" content="５日間限定 秋祭り サンセリテ札幌公式オンラインショップ">
+	<meta property="og:description" content="今だけの特別大特価なんでもかんでも値上がりの今だから。サンセリテ秋祭り">
+	<meta property="og:url" content="">
 	<meta property="og:site_name" content="サンセリテ札幌公式オンラインショップ">
-	<meta property="og:image" content="https://www.sincerite.jp/lp/kakedashi/assets/images/og.png">
-	<link rel='stylesheet' href='/assets/css/app.css' type='text/css' media='all' />
+	<link rel='stylesheet' href='https://www.sincerite.jp/lp/akimatsuri/assets/css/app.css' type='text/css' media='all' />
 </head>
 <body>
 <div class="wrap">
@@ -24,50 +23,50 @@
 		<div class="container">
 			<h1 class="page-logo">
 				<a href="https://www.sincerite.jp/">
-					<img src="https://www.sincerite.jp/lp/kakedashi/assets/images/logo.svg" alt="サンセリテ札幌　KAKEDASHI - かけだし">
+					<img src="https://www.sincerite.jp/lp/kakedashihttps://www.sincerite.jp/lp/akimatsuri/assets/images/logo.svg" alt="サンセリテ札幌">
 				</a>
 			</h1>
 			<div class="md-cta">
 				<div class="md-cta__headline">
-					<img src="/assets/images/md-text.png" alt="新健康習慣、はじめよう！">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/md-text.png" alt="">
 				</div>
 				<div class="md-cta__image">
-					<img src="/assets/images/md-cts.png" alt="新健康習慣、はじめよう！">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/md-cts.png" alt="">
 				</div>
 				<div class="md-links">
 					<a href="https://shop.sincerite.jp/lp?u=kakedashi_01" class="md-cta__btn">
-						<img src="/assets/images/btn_cta.png" alt="購入はこちら">
+						<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/btn_cta.png" alt="">
 					</a>
 				</div>
 			</div>
 			<div class="md-character">
-				<img src="/assets/images/md-character.png" alt="KAKEDASHIくん">
+				<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/md-character.png" alt="">
 			</div>
 			<div class="contents">
 				<section class="fv">
-					<img src="/assets/images/akimatsuri_fv.png" alt="">
-					<a href="" class="fv-cta"><img src="/assets/images/btn_cta.png" alt=""></a>
-					<img class="fv-text" src="/assets/images/fv_text.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/akimatsuri_fv.png" alt="">
+					<a href="" class="fv-cta"><img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/btn_cta.png" alt=""></a>
+					<img class="fv-text" src="https://www.sincerite.jp/lp/akimatsuri/assets/images/fv_text.png" alt="">
 				</section>
 				<section class="content">
-					<img src="/assets/images/01.png" alt="">
-					<img src="/assets/images/02.png" alt="">
-					<img src="/assets/images/03.png" alt="">
-					<img src="/assets/images/04.png" alt="">
-					<img src="/assets/images/05.png" alt="">
-					<img src="/assets/images/06.png" alt="">
-					<img src="/assets/images/07.png" alt="">
-					<img src="/assets/images/08.png" alt="">
-					<img src="/assets/images/09.png" alt="">
-					<img src="/assets/images/10.png" alt="">
-					<img src="/assets/images/11.png" alt="">
-					<img src="/assets/images/12.png" alt="">
-					<img src="/assets/images/13.png" alt="">
-					<img src="/assets/images/14.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/01.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/02.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/03.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/04.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/05.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/06.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/07.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/08.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/09.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/10.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/11.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/12.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/13.png" alt="">
+					<img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/14.png" alt="">
 					<div class="footer-cta">
-						<a href=""><img src="/assets/images/btn_cta.png" alt=""></a>
+						<a href=""><img src="https://www.sincerite.jp/lp/akimatsuri/assets/images/btn_cta.png" alt=""></a>
 					</div>
-					<img class="copyright" src="/assets/images/copyright.png" alt="">
+					<img class="copyright" src="https://www.sincerite.jp/lp/akimatsuri/assets/images/copyright.png" alt="">
 				</section>
 			</div>
 		</div>
@@ -78,6 +77,6 @@
 	</footer>
 </div>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script type='text/javascript' src='https://www.sincerite.jp/lp/kakedashi/assets/js/app.js'></script>
+<script type='text/javascript' src='https://www.sincerite.jp/lp/kakedashihttps://www.sincerite.jp/lp/akimatsuri/assets/js/app.js'></script>
 </body>
 </html>
